feat(loading-screen): Implement loading progress bar.

--- a/resources/[core]/loading-screen/ui/index.html
+++ b/resources/[core]/loading-screen/ui/index.html
@@ -9,5 +9,10 @@
         <h1>Pioneer Village</h1>
         <p>Never break character!</p>
     </div>
+
+    <div class="loading-bar">
+        <div id="progress" class="loading-bar-progress"></div>
+        <div id="progress-text" class="loading-bar-text">0%</div>
+    </div>
   </body>
 </html>
