feat: Hide loading bar when first initialized. Implement step message rendering.

--- a/resources/[core]/loading-screen/ui/index.html
+++ b/resources/[core]/loading-screen/ui/index.html
@@ -10,9 +10,10 @@
         <p>Never break character!</p>
     </div>
 
-    <div class="loading-bar">
-        <div id="progress" class="loading-bar-progress"></div>
+    <div id="progress" class="loading-bar hide">
+        <div id="progress-bar" class="loading-bar-progress"></div>
         <div id="progress-text" class="loading-bar-text">0%</div>
+        <div id="progress-sub-text" class="loading-bar-sub-text"></div>
     </div>
   </body>
 </html>
